--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Question 💚</title>
+  <title>One Question 💚</title>
 
   <style>
     body {
@@ -15,6 +15,12 @@
 
     .container {
       padding: 40px;
+      opacity: 1;
+      transition: opacity 1s ease;
+    }
+
+    .container.fade-out {
+      opacity: 0;
     }
 
     img {
@@ -35,6 +41,7 @@
     .yes { background: #2ecc71; color: white; }
     .no  { background: #aaa; position: relative; }
 
+    /* Fullscreen second image */
     #fullscreen {
       position: fixed;
       inset: 0;
@@ -44,8 +51,11 @@
       z-index: 9999;
     }
 
-    #fullscreen.show { opacity: 1; }
+    #fullscreen.show {
+      opacity: 1;
+    }
 
+    /* Emoji rain */
     .emoji {
       position: fixed;
       top: -40px;
@@ -67,9 +77,10 @@
 <body>
 
 <div class="container" id="content">
-  <h2>Okay, serious question 🙄</h2>
+  <h2>Okay listen 🙄</h2>
   <h1>Will you be my Valentine? 💚</h1>
 
+  <!-- FIRST IMAGE -->
   <img src="pic1.jpg">
 
   <br>
@@ -78,6 +89,7 @@
   <button class="no" onmouseover="runAway(this)">No</button>
 </div>
 
+<!-- SECOND IMAGE (FULLSCREEN) -->
 <div id="fullscreen"></div>
 
 <audio id="song" playsinline>
@@ -86,13 +98,21 @@
 
 <script>
   const yesBtn = document.getElementById("yesBtn");
+  const content = document.getElementById("content");
+  const fullscreen = document.getElementById("fullscreen");
   const audio = document.getElementById("song");
 
   yesBtn.addEventListener("click", () => {
     audio.play().then(() => {
-      document.getElementById("content").style.display = "none";
-      document.getElementById("fullscreen").classList.add("show");
-      startEmojiRain();
+      // fade out first content
+      content.classList.add("fade-out");
+
+      // after fade, show fullscreen image
+      setTimeout(() => {
+        content.style.display = "none";
+        fullscreen.classList.add("show");
+        startEmojiRain();
+      }, 1000);
     });
   });
 
